# Exam3

./: .gitignore  CMakeLists.txt  Readme.md  build.bat  build.sh
app/: CMakeLists.txt
app/src/: app.cpp
include/: hash_server.h
lib/: CMakeLists.txt
lib/include/HashServer/: HashServer.h
lib/include/hasher/: hasher.h
lib/src/: HashServer.cpp  HashServerImp.cpp  HashServerImp.h  lib.cpp
src/: app.cpp  hash_server.cpp
test/: CMakeLists.txt
test/src/: test.cpp
